# early-feedback

./: .env.example  .gitignore  README.md  config.py  evaluate.py  llm.py  models.py  pipeline.py  pyproject.toml  render_report.py
.claude/commands/: evaluate.md
assets/: generate_screenshots.js  screenshots.html
evaluate/: SKILL.md
examples/: README.md  brickdreams.md  invoiceflow.md
prompts/: analyst.txt  context_parser.txt  interviewer.txt  persona_generator.txt  report_writer.txt
steps/: analyze_feedback.py  generate_personas.py  generate_report.py  parse_context.py  simulate_interviews.py
tests/: conftest.py  test_real_reports.py  test_report_format.py  test_skill_content.py  validate_report.py
