[project]
name = "early-feedback"
version = "1.8.2"
description = "Get honest feedback on product ideas before you build them"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{ name = "brianmweller" }]
keywords = ["product-evaluation", "synthetic-research", "claude-code", "agent-skill"]

[project.urls]
Repository = "https://github.com/brianmweller/early-feedback"

[tool.pytest.ini_options]
testpaths = ["tests"]
